--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,5 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run: mvn -8 package --file pom.xml
+        run: mvn -B package --file pom.xml
       
